Derma-340 & Derma-319 test(frontend + backend): add tests to reach 80 percent coverage